--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -59,7 +59,7 @@
                         <th scope="row" class="product-id">{{producto.idproducto}}</th>
                         <td>
                             <div class="imagen-producto ml-auto mr-auto">
-                                <img src="{{url+'get-image/'+producto.urlportada}}" alt="{{producto.nombre}}">
+                                <img class="img-fluid" src="{{url+'get-image/'+producto.urlportada}}" alt="{{producto.nombre}}">
                             </div>
                         </td>
                         <td>{{producto.nombre}}</td>
