--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.css
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.css
@@ -3,19 +3,19 @@
     height: 60px;
     background: #CCC;
     overflow: hidden;
-    vertical-align: middle;
+    text-align: center;
 }
-
 
 .imagen-producto img{
     width: 100%;
-    height: auto;
+    height:120%;
     vertical-align: middle;
+
 }
 
 @supports(object-fit: cover){
     .imagen-producto img{
-      height: 100%;
+      height: 120%;
       object-fit: cover;
       object-position: center center;
     }
@@ -30,9 +30,6 @@
     font-size: 1.30vw;
 }
 
-/* h1{
-    font-size: 100%;
-} */
 
 .btn:focus {
     outline: none;
