--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -5,7 +5,8 @@
     </div>
     <div>
         <div class="p-3 text-center">
-            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#addDiscountModal">Agregar producto</button> <!--addProductModal -->
+            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#addProductModal">Agregar producto</button>
+            <!--addProductModal -->
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="(idproductos) ? ((idproductos.length === 1) ?  updateModal.setProductInfo(idproductos[0]) : (idproductos.length > 1) ? manyProductsAlert() : emptyProductAlert()) : emptyProductAlert()">Modificar producto</button>
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" (click)="idproductos ? deleteProducts() : emptyProductAlert()">Eliminar producto</button>
         </div>
@@ -69,8 +70,8 @@
                         <td>L {{producto.precio}}</td>
                         <td>
                             <button class="btn btn-sm w-50" type="button"><i class="fa fa-trash mr-4" aria-hidden="true" (click)="deleteProduct(producto.idproducto, 1)"></i></button>
-                            <img  class="ml-1 add-discount"  style="width: 20px;" src="assets/img/administrador/offer.png"  alt="add-promocion"  data-toggle="modal" data-target="#addDiscountModal" data-placement="bottom" title="Añadir promoción" (click)="modalPromocion.getProductInfo(producto.idproducto, producto.nombre)" >
-                          
+                            <img class="ml-1 add-discount" style="width: 20px;" src="assets/img/administrador/offer.png" alt="add-promocion" data-toggle="modal" data-target="#addDiscountModal" data-placement="bottom" title="Añadir promoción" (click)="modalPromocion.getProductInfo(producto.idproducto, producto.nombre)">
+
                         </td>
                     </tr>
                     <tr *ngIf="(productos | filterBy: productosFilterByName || productos | filterBy: productosFilterByName).length === 0">
