--- a/frontend/src/app/componentes/promocion/promocion.component.html
+++ b/frontend/src/app/componentes/promocion/promocion.component.html
@@ -8,11 +8,11 @@
 </div>
 
 <div class=" container">
-    <div class="input-group flex-nowrap " style="margin-top: 5px; width: 50%;">
+    <div class="input-group flex-nowrap " style="margin-top: 5px;">
         <div class="input-group-prepend">
             <span class="input-group-text" id="addon-wrapping"><i class="fas fa-search"></i></span>
         </div>
-        <input type="text" class="form-control" placeholder="Buscar Promoción" aria-label="Username" aria-describedby="addon-wrapping">
+        <input type="text" class="form-control" placeholder="Buscar Promoción" aria-label="Username" aria-describedby="addon-wrapping" [(ngModel)]="filtroPromo" name="filtroPromo">
     </div>
 </div>
 
@@ -22,11 +22,11 @@
 
     <div class="row justify-content-center">
 
-        <div class="col-lg-4 col-md-6 col-12" *ngFor="let promocion of promociones">
-            <div class="card">
+        <div class="col-lg-4 col-md-6 col-12" *ngFor="let promocion of promociones | filtroPromoCategoria :filtroPromo  ">
+            <div class="card mt-4 mb-3 ml-2 mr-2">
                 <div class="card-header ">
                     <div class="img-animtion image-promo">
-                        <img src=" " alt="" class="card-img-top imagenes">
+                        <img src="{{url+'get-image/'+promocion.urlportada}}" alt="" class="card-img-top imagenes">
                     </div>
                 </div>
                 <div class="card-body text-center" id="divPadre">
@@ -59,3 +59,5 @@
 
     </div>
 </div>
+
+<app-piepagina></app-piepagina>
