--- a/frontend/src/app/componentes/promocion/promocion.component.css
+++ b/frontend/src/app/componentes/promocion/promocion.component.css
@@ -1,9 +1,12 @@
 .image-promo {
-    padding-left: 5%;
+    padding-left: 5%; 
     padding-right: 5%;
-    padding-bottom: 5%;
+    padding-bottom: 25%;
     padding-top: 5%;
     width: 100%;
+    overflow: hidden;
+    text-align: center;
+    height: 350px;
 }
 
 h1 {
@@ -20,12 +23,12 @@ h1 {
 }
 
 .card-header {
-    background-color: rgba(237, 200, 207, 0.3);
+    background-color: white !important;
 }
 
 .imagenes {
     width: 100%;
-    height: 300px;
+    height: 250px;
     object-fit: scale-down;
 }
 
@@ -57,3 +60,6 @@ h3 {
 .btn {
     width: 100%;
 }
+
+
+
