--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -14,7 +14,7 @@
             </li>
 
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/productos']">Categorías</a>
+                <a class="nav-link" [routerLink]="['/productos']">Productos</a>
             </li>
 
             <li class="nav-item" routerLinkActive="active">
