--- a/frontend/src/app/componentes/productos/productos.component.css
+++ b/frontend/src/app/componentes/productos/productos.component.css
@@ -4,96 +4,109 @@ h1 {
     -webkit-background-clip: text;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 5vw;
     font-weight: bold;
     text-align: left;
     letter-spacing: -2px;
-    line-height: 110px;
-    margin-left: 20px;
+    line-height: 90px;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+#content-boton {
+    margin-top: 2%;
 }
 
-.container {
-    width: 80%;
-    margin: 50px auto;
+#wrapper {
+    overflow-x: hidden;
+    background-color: transparent;
 }
 
-.heading {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 50px;
+#nav {
+    background-color: transparent;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-flow: wrap;
+
+/*navbar*/
+
+.icono {
+    padding-left: 20px;
+    font-size: 150%;
 }
 
-.card {
-    width: 20%;
-    background: #fff;
-    border: 1px solid #ccc;
-    margin-bottom: 50px;
-    transition: 0.3s;
-    height: 20%;
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .list-group {
+    width: 15rem;
+}
+
+#page-content-wrapper {
+    min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+.container-fluid {
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
 }
 
 .card-header {
+    background-color: rgba(237, 200, 207, 0.3);
+}
+
+.example1 img {
+    width: 100%;
+    height: auto;
+    border: 2px solid #fff;
+}
+
+.example1 img.tres {
+    object-fit: cover;
+}
+
+#circulo {
+    width: 50%;
+    height: 50px;
+    background-color: rgba(75, 219, 207, 0.3);
+    border-radius: 80px;
+    margin: 0px auto;
+    margin-bottom: 3%;
+}
+
+#divPadre {
     text-align: center;
-    padding: 50px 10px;
-    background: linear-gradient(to right, #50a1a5, #00b319);
-    color: #fff;
 }
 
-.card-body {
-    padding: 30px 20px;
+h3 {
+    color: rgb(103, 241, 207);
+    text-shadow: -1px 0 rgb(0, 0, 0), 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 2em;
+    padding-top: 2%;
+}
+
+.icono {
+    font-size: 2em;
     text-align: center;
-    font-size: 18px;
-}
-
-.card-body .btn {
-    display: block;
-    color: #fff;
-    text-align: center;
-    background: linear-gradient(to right, #87ce91, #008513);
-    margin-top: 30px;
-    text-decoration: none;
-    padding: 10px 5px;
-}
-
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
-}
-
-@media screen and (max-width: 1000px) {
-    .card {
-        width: 40%;
-    }
-}
-
-@media screen and (max-width: 620px) {
-    .container {
-        width: 100%;
-    }
-    .heading {
-        padding: 20px;
-        font-size: 20px;
-    }
-    .card {
-        width: 60%;
-    }
-}
-
-h2 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 120%;
-    padding-top: 25px;
 }
