--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -1,69 +1,151 @@
 <app-encabezado></app-encabezado>
 
-<h1 id="cactus">Categorías</h1>
+<body>
 
-<div class="container">
+    <div class="d-flex" id="wrapper">
 
-    <div class="row">
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
-                <h2> Nombre Categoría</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Especie:
-                </p>
-                <p>
-                    Genero:
-                </p>
-                <a href="#" class="btn">Ver Producto</a>
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="list-group list-group-flush">
+
+                <div class=" container">
+                    <div class=" row">
+                        <div class=" col-4">
+                            Precio
+                        </div>
+                        <div class=" col-4">
+                            <input type="text" size="3">
+                        </div>
+                        <div class=" col-4">
+                            <input type="text" size="3">
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" container">
+                    <div class=" row">
+                        <div class=" col-4">
+                            Tamaño
+                        </div>
+                        <div class=" col-4">
+                            <input type="text" size="3">
+                        </div>
+                        <div class=" col-4">
+                            <input type="text" size="3">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class=" container">
+                    <div class=" row">
+                        <div class=" col-4">
+                            Familia
+                        </div>
+                        <div class=" col-8">
+                            <select name="select">
+                                <option value="value1">Value 1</option> 
+                                <option value="value2" selected>Value 2</option>
+                                <option value="value3">Value 3</option>
+                              </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" container">
+                    <div class=" row">
+                        <div class=" col-4">
+                            Genero
+                        </div>
+                        <div class=" col-8">
+                            <select>
+                                <option *ngFor="let genero of generos" [value]="genero.descripcion_genero">
+                                  {{genero.descripcion_genero}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" container">
+                    <div class=" row">
+                        <div class=" col-4">
+                            Especie
+                        </div>
+                        <div class=" col-8">
+                            <select>
+                                <option *ngFor="let especie of especies" [value]="especie.descripcion_especie">
+                                  {{especie.descripcion_especie}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
-                <h2> Nombre Categoría</h2>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+
+            <div class=" container" id="content-boton">
+                <button class="btn btn-primary boton-menu" id="menu-toggle"><i class="fas fa-filter"></i></button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  </button>
             </div>
-            <div class="card-body">
-                <p>
-                    Especie:
-                </p>
-                <p>
-                    Genero:
-                </p>
-                <a href="#" class="btn">Ver Producto</a>
+
+
+            <div class=" container">
+                <h1> PRODUCTOS </h1>
+            </div>
+
+
+
+            <div class="container mt-3">
+
+                <div class="row justify-content-center">
+
+                    <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of productos ">
+                        <div class="card mt-4 mb-3 ml-2 mr-2">
+                            <div class="card-header ">
+                                <div class="img-animtion image-promo">
+                                    <img src="{{url+'get-image/'+producto.urlportada}}" alt="" class="card-img-top imagenes">
+                                </div>
+                            </div>
+                            <div class="card-body text-center" id="divPadre">
+
+                                <h5 class="card-title">
+                                    {{producto.nombre}}
+                                </h5>
+                                <p class="card-text" style="font-size: 1.3em;">
+                                    <span> Precio</span> <span>  L. </span> <span><s>{{producto.precio}}</s></span>
+                                </p>
+
+                                <div class=" container">
+                                    <div class="row">
+                                        <div class=" col-8">
+                                            <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
+                                        </div>
+                                        <div class=" col-4">
+                                            <i class="fas fa-shopping-cart icono"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
-                <h2> Nombre Categoría</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Especie:
-                </p>
-                <p>
-                    Genero:
-                </p>
-                <a href="#" class="btn">Ver Producto</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
-                <h2> Nombre Categoría</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Especie:
-                </p>
-                <p>
-                    Genero:
-                </p>
-                <a href="#" class="btn">Ver Producto</a>
-            </div>
-        </div>
+        <!-- /#page-content-wrapper -->
+
     </div>
-</div>
+    <!-- /#wrapper -->
+
+
+</body>
