--- a/frontend/src/app/componentes/promocion/promocion.component.html
+++ b/frontend/src/app/componentes/promocion/promocion.component.html
@@ -22,7 +22,7 @@
 
     <div class="row justify-content-center">
 
-        <div class="col-lg-4 col-md-6 col-12" *ngFor="let promocion of promociones | filtroPromoCategoria :filtroPromo  ">
+        <div class="col-lg-4 col-md-6 col-12" *ngFor="let promocion of promociones | filtroPromocion : filtroPromo">
             <div class="card mt-4 mb-3 ml-2 mr-2">
                 <div class="card-header ">
                     <div class="img-animtion image-promo">
