--- a/frontend/src/app/componentes/productos/productos.component.css
+++ b/frontend/src/app/componentes/productos/productos.component.css
@@ -1,16 +1,3 @@
-h1 {
-    color: transparent;
-    background: url(/assets/img/1C.png) repeat;
-    -webkit-background-clip: text;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-transform: uppercase;
-    font-size: 5vw;
-    font-weight: bold;
-    text-align: left;
-    letter-spacing: -2px;
-    line-height: 90px;
-}
-
 #content-boton {
     margin-top: 2%;
 }
@@ -72,24 +59,44 @@ h1 {
     }
 }
 
-.card-header {
-    background-color: rgba(237, 200, 207, 0.3);
-}
-
-.example1 img {
+.image-promo {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 25%;
+    padding-top: 5%;
     width: 100%;
-    height: auto;
-    border: 2px solid #fff;
+    overflow: hidden;
+    text-align: center;
+    height: 350px;
 }
 
-.example1 img.tres {
-    object-fit: cover;
+h1 {
+    color: transparent;
+    background: url(/assets/img/1C.png) repeat;
+    -webkit-background-clip: text;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    font-size: 5vw;
+    font-weight: bold;
+    text-align: left;
+    letter-spacing: -2px;
+    line-height: 90px;
+}
+
+.card-header {
+    background-color: white !important;
+}
+
+.imagenes {
+    width: 100%;
+    height: 250px;
+    object-fit: scale-down;
 }
 
 #circulo {
     width: 50%;
     height: 50px;
-    background-color: rgba(75, 219, 207, 0.3);
+    background-color: rgba(75, 219, 207);
     border-radius: 80px;
     margin: 0px auto;
     margin-bottom: 3%;
@@ -100,7 +107,7 @@ h1 {
 }
 
 h3 {
-    color: rgb(103, 241, 207);
+    color: rgb(179, 247, 230);
     text-shadow: -1px 0 rgb(0, 0, 0), 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 2em;
     padding-top: 2%;
