--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -43,11 +43,11 @@
                             Familia
                         </div>
                         <div class=" col-8">
-                            <select name="select">
-                                <option value="value1">Value 1</option> 
-                                <option value="value2" selected>Value 2</option>
-                                <option value="value3">Value 3</option>
-                              </select>
+                            <select>
+                                <option *ngFor="let familia of familias" [value]="familia.descripcion_familia">
+                                  {{familia.descripcion_familia}}
+                                </option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -104,15 +104,18 @@
 
 
 
+
+
+
+
             <div class="container mt-3">
-
                 <div class="row justify-content-center">
-
                     <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of productos ">
-                        <div class="card mt-4 mb-3 ml-2 mr-2">
-                            <div class="card-header ">
-                                <div class="img-animtion image-promo">
+                        <div class="card mb-5 mt-1 mr-3 ml-3">
+                            <div class="card-header p-0 ">
+                                <div class="img-animtion imagenes">
                                     <img src="{{url+'get-image/'+producto.urlportada}}" alt="" class="card-img-top imagenes">
+
                                 </div>
                             </div>
                             <div class="card-body text-center" id="divPadre">
@@ -137,8 +140,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
