--- a/frontend/src/app/componentes/promocion/promocion.component.html
+++ b/frontend/src/app/componentes/promocion/promocion.component.html
@@ -19,31 +19,27 @@
 
 
 <div class="container mt-3">
-
     <div class="row justify-content-center">
-
-
-        <div class="col-lg-4 col-md-6 col-12" >
-            <!-- *ngFor="let promocion of promociones" -->
-            <div class="card">
+        <div class="col-lg-4 col-md-6 col-12" *ngFor="let promocion of promociones | filtroPromocion : filtroPromo">
+            <div class="card mb-5 mt-1 mr-3 ml-3">
                 <div class="card-header p-0 ">
                     <div class="img-animtion imagenes">
-                        <img src="assets/img/productos/11.jpg" alt="" class="card-img-top imagenes">
+                        <img src="{{url+'get-image/'+promocion.urlportada}}" alt="" class="card-img-top imagenes">
 
                     </div>
                 </div>
                 <div class="card-body text-center" id="divPadre">
                     <div id="circulo" class="card-title">
-                        <h3>10%</h3>
+                        <h3>{{promocion.porcentajedescuento}}%</h3>
                     </div>
                     <h5 class="card-title">
-                        lithop
+                        {{promocion.nombre}}
                     </h5>
                     <p class="card-text" style="font-size: 1.3em;">
-                        <span> Precio</span> <span>  L. </span> <span><s>250</s></span>
+                        <span> Precio</span> <span>  L. </span> <span><s>{{promocion.precio}}</s></span>
                     </p>
                     <p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
-                        <span>  L. </span> <span>225</span>
+                        <span>  L. </span> <span>{{promocion.preciocondescuento}}</span>
                     </p>
                     <div class=" container">
                         <div class="row">
@@ -58,55 +54,5 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-12" >
-            <div class="card">
-                <div class="card-header p-0">
-                    <div class="img-animtion imagenes">
-                        <img src="assets/img/productos/13.jpg" alt="" class="card-img-top imagenes">
-                    </div>
-                </div>
-                <div class="card-body text-center" id="divPadre">
-                    <div id="circulo" class="card-title">
-                        <h3>10%</h3>
-                    </div>
-                    <h5 class="card-title">
-                        lithop
-                    </h5>
-                    <p class="card-text" style="font-size: 1.3em;">
-                        <span> Precio</span> <span>  L. </span> <span><s>250</s></span>
-                    </p>
-                    <p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
-                        <span>  L. </span> <span>225</span>
-                    </p>
-                    <div class=" container">
-                        <div class="row">
-                            <div class=" col-8">
-                                <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
-                            </div>
-                            <div class=" col-4">
-                                <i class="fas fa-shopping-cart icono"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
-
-
-
-<!-- <div id="circulo" class="card-title">
-    <h3>{{promocion.porcentajedescuento}}%</h3>
-</div>
-<h5 class="card-title">
-    {{promocion.nombre}}
-</h5>
-<p class="card-text" style="font-size: 1.3em;">
-    <span> Precio</span> <span>  L. </span> <span><s>{{promocion.precio}}</s></span>
-</p>
-<p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
-    <span>  L. </span> <span>{{promocion.preciocondescuento}}</span>
-</p> -->
-
