--- a/frontend/src/app/componentes/inicio/inicio.component.html
+++ b/frontend/src/app/componentes/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<app-encabezado></app-encabezado>
+<!-- <app-encabezado></app-encabezado> -->
 <app-carruzel></app-carruzel>
 
 <div class="container">
