--- a/frontend/src/app/componentes/perfil/perfil.component.html
+++ b/frontend/src/app/componentes/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<app-encabezado [nombreActualizado]="nombreUsuario"></app-encabezado>
+<!-- <app-encabezado [nombreActualizado]="nombreUsuario"></app-encabezado> -->
 
 <body>
     <div class="container">
