--- a/frontend/src/app/componentes/administrador/modificar-producto/modificar-producto.component.css
+++ b/frontend/src/app/componentes/administrador/modificar-producto/modificar-producto.component.css
@@ -1,3 +1,8 @@
+.modal-header {
+    background-color: #50a1a5;
+    color: white;
+}
+
 .btn-cambia-imagen {
     position: absolute;
     z-index: 100;
